--- a/config/hostapd.conf
+++ b/config/hostapd.conf
@@ -24,7 +24,7 @@ wpa_group_rekey=0
 wpa_gmk_rekey=0
 wpa_ptk_rekey=0
 interface=wlan1
-ssid=AndroidAP
+ssid=XPerience
 ap_table_max_size=255
 ap_table_expiration_time=3600
 tx_queue_data2_aifs=2
